--- a/frontend/src/css/components/_placefilter.scss
+++ b/frontend/src/css/components/_placefilter.scss
@@ -24,7 +24,8 @@
         color: $sub-color;
     }
     :nth-child(1),
-    :nth-child(2) {
+    :nth-child(2),
+    :nth-child(3) {
         .MuiButton-root {
             border: 2px solid $em-color-1;
         }
@@ -32,22 +33,14 @@
             color: $em-color-1;
         }
     }
-    :nth-child(3),
     :nth-child(4),
-    :nth-child(5) {
+    :nth-child(5),
+    :nth-child(6) {
         .MuiButton-root {
             border: 2px solid $em-color-2;
         }
         .MuiSvgIcon-root {
             color: $em-color-2;
-        }
-    }
-    :nth-child(6) {
-        .MuiButton-root {
-            border: 2px solid $em-color-3;
-        }
-        .MuiSvgIcon-root {
-            color: $em-color-3;
         }
     }
     :nth-child(7) {
@@ -63,18 +56,20 @@
 .place-filter {
     display: flex;
     margin: 1rem;
-    .MuiSvgIcon-root {
-        margin-right: 0.3rem;
-    }
     span {
         @include font-default(500);
+    }
+    img {
+        width: 1.5rem;
+        margin-right: 0.3rem;
     }
     @include mobile {
         width: 4.5rem;
         margin: 0.5rem 0.3rem 0 0;
-        .MuiSvgIcon-root {
+        
+        img {
             margin-right: 0.2rem;
-            font-size: 1rem;
+            width: 1rem;
         }
         span {
             @include font-default(500, 0.7rem);
